--- a/frontend/src/pages/Appointment.module.css
+++ b/frontend/src/pages/Appointment.module.css
@@ -18,3 +18,19 @@ body{
     border: 0px solid rgb(212, 212, 212);
     border-radius: 0.5rem; 
 }
+
+.save-btn{
+    border: 1px solid black;
+    width: 8rem;
+    height: 2rem;
+    text-align: center;
+    border-radius: 1rem;
+    margin-top: 2rem;
+    background-color: #008CBA;
+}
+
+.buttons{
+    display: flex;
+    justify-content: flex-end;
+    gap : 1rem
+}
